Update default free model to google/gemma-2-9b-it:free

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
 # OpenRouter API Configuration
 # Copy this file to .env and add your actual API key
 
+# Get your FREE API key from: https://openrouter.ai/keys
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
-# Specify the model to use (free Llama model by default)
-OPENROUTER_MODEL=meta-llama/llama-3.1-8b-instruct:free
+# FREE models available (pick one):
+# - google/gemma-2-9b-it:free           (Recommended - reliable)
+# - deepseek/deepseek-r1:free           (Good for reasoning)
+# - meta-llama/llama-3.1-8b-instruct:free
+# - mistralai/mistral-small-3.1-24b-instruct:free
+# - qwen/qwen-2.5-7b-instruct:free
+
+OPENROUTER_MODEL=google/gemma-2-9b-it:free
